fixed light/dark mode in blockquote

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -306,13 +306,17 @@ input[type="checkbox"] {
 }
 
 blockquote {
-  border-radius: 5px;
-  border: 1px solid var(--secondary);
-  background-color:rgb(17, 13, 13);
-  margin: 1rem 0;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  border-radius: 10px;
+  background-color: var(--blockquotebg);
+  margin: 0 3rem;
+  padding: 1rem 2rem;
   transition: border-color 0.2s ease;
+
+  p {
+    margin: 0;
+    text-align: normal;
+    font-style: italic;
+  }
 }
 
 h1,
