--- a/quartz/styles/callouts.scss
+++ b/quartz/styles/callouts.scss
@@ -5,10 +5,15 @@
   border: 1px solid var(--border);
   background-color: var(--bg);
   border-radius: 5px;
-  padding: 0 1rem;
+  padding: 0 2rem;
   overflow-y: hidden;
   transition: max-height 0.3s ease;
   box-sizing: border-box;
+
+  .callout-content p {
+    margin: 16px 0;
+    font-style: normal;
+  }
 
   & > .callout-content > :first-child {
     margin-top: 0;
@@ -137,6 +142,7 @@
   & > .callout-title-inner > p {
     color: var(--color);
     margin: 0;
+    font-style: normal;
   }
 
   .callout-icon,
